# asreview-makita

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  paper.bib  paper.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci-workflow.yml  create-examples.yml  draft-pdf.yml  pythonpackage.yml  static.yml
.github/workflows/test_data/: priors_labels.csv
asreviewcontrib/makita/: __init__.py  _version.py  config.py  entrypoint.py  template_arfi.py  template_base.py  template_basic.py  template_modelmatrix.py  template_multimodel.py  template_multiple_models.py  template_prior.py  utils.py
asreviewcontrib/makita/cookiecutter/: cookiecutter.json
asreviewcontrib/makita/templates/: doc_README.md.template  script_ATD_calculations.py.template  script_data_describe.py.template  script_get_plot.py.template  script_get_settings_from_state.py.template  script_merge_descriptives.py.template  script_merge_metrics.py.template  (+8 more)
docs/: index.html
examples/: README.md
examples/arfi_example/: README.md  jobs.bat  jobs.sh
examples/arfi_multi_ai_example/: jobs.sh
examples/basic_example/: README.md  jobs.bat  jobs.sh
examples/basic_multi_ai_example/: jobs.sh
examples/modelmatrix_example/: README.md  jobs.sh
examples/multimodel_example/: README.md  jobs.bat  jobs.sh
examples/multiple_models_example/: README.md  jobs.sh
examples/prior_example/: README.md  jobs.bat  jobs.sh
joss/: paper.bib  paper.json  paper.md
python_boilerplate/: jobs.sh
scripts/: generate_examples.sh
tests/: test_entrypoint.py
(+30 files in other folders)
